5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1721_3035.log
== SUBMITION (2019-05-02 18:53:28) 
-- CODE:
x= float(input("valor de x: "))

if (x<=0 and seno, x > 0 not )
  


-- EXECUTION TIME:
0.127486
-- ERROR:
  File "/home/codebench/codes/1721/3035/main.py", line 3
    if (x<=0 and seno, x > 0 not )
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:53:28) 
-- CODE:
x= float(input("valor de x: "))

if (x<=0 and seno, x > 0 not )
  


-- ERROR:
File "XXXX", line 3
    if (x<=0 and seno, x > 0 not )
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
